<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.android.quizimpossibru.Finished">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            style="@style/finishStyle"
            android:text="@string/star" />

        <TextView
            style="@style/finishStyle"
            android:text="@string/finish" />

        <TextView
            style="@style/finishStyle"
            android:text="@string/star" />

        <TextView
            style="@style/finishStyle"
            android:text="@string/score" />

        <TextView
            android:id="@+id/scoreView"
            style="@style/finishStyle"
            android:text="@string/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/next_button"
            style="@style/buttonStyle"
            android:onClick="startQuiz"
            android:text="@string/restart" />

    </LinearLayout>
</LinearLayout>
